--- a/style.css
+++ b/style.css
@@ -79,7 +79,8 @@ li{display: inline;float: left;padding: 10px;color: #005099;font-size: 25px;padd
     text-decoration: underline 4px #fff;;
     letter-spacing: 1px;
     width: 100%;
-    text-align: center;text-underline-offset: 0.5em;
+    text-align: center;
+    text-underline-offset: 0.5em;
 }
 .cookies p{ color: mintcream;}
 .cookies img{
@@ -88,10 +89,16 @@ li{display: inline;float: left;padding: 10px;color: #005099;font-size: 25px;padd
 .confi h3{text-align: center;
 
 }
-.confi-img img{width:50px;height: 60px;
+.confi-img img{width:50px;height: 70px;padding: 20px;
 
 }
 .confi-img{ width: 100%;height: 300px; display: flex;
 
 }
-
+.img_roun{
+    border-radius: 50%;width: 50px;height: 70px;border: 4px solid blue;
+    position: relative;padding: 10px;overflow: hidden;
+}
+.imgname{
+    width:50px;height: 70px;padding: 35px;text-align: center;
+}
